[package]
name = "cargo-typify"
version = "0.0.12-dev"
edition = "2021"
license = "Apache-2.0"
description = "cargo command to generate Rust code from a JSON Schema"
repository = "https://github.com/oxidecomputer/typify"
readme = "README.md"
keywords = ["json", "schema", "cargo"]
categories = ["api-bindings", "compilers"]

default-run = "cargo-typify"

[dependencies]
typify = { version = "0.0.12-dev", path = "../typify" }

clap = { version = "4.2.1", features = ["derive"] }
color-eyre = "0.6"
serde_json = "1.0.95"
schemars = "0.8.12"
rustfmt-wrapper = "0.2.0"

[dev-dependencies]
assert_cmd = "2.0.11"
expectorate = "1.0.6"
newline-converter = "0.3.0"
tempdir = "0.3.7"
