[package]
name = "cargo-typify"
version = "0.0.16"
edition = "2021"
license = "Apache-2.0"
description = "cargo command to generate Rust code from a JSON Schema"
repository = "https://github.com/oxidecomputer/typify"
readme = "README.md"
keywords = ["json", "schema", "cargo"]
categories = ["api-bindings", "compilers"]

default-run = "cargo-typify"

[dependencies]
typify = { version = "0.0.16", path = "../typify" }

clap = { version = "4.5.4", features = ["derive"] }
color-eyre = "0.6"
env_logger = "0.10"
rustfmt-wrapper = "0.2.1"
serde_json = "1.0.116"
schemars = "0.8.17"

[dev-dependencies]
assert_cmd = "2.0.14"
expectorate = "1.1.0"
newline-converter = "0.3.0"
tempdir = "0.3.7"
