[package]
name = "cargo-typify"
version = "0.5.0"
edition = "2021"
license = "Apache-2.0"
description = "cargo command to generate Rust code from a JSON Schema"
repository = "https://github.com/oxidecomputer/typify"
readme = "README.md"
keywords = ["json", "schema", "cargo"]
categories = ["api-bindings", "compilers"]

default-run = "cargo-typify"

[dependencies]
typify = { workspace = true }

clap = { workspace = true }
color-eyre = { workspace = true }
env_logger = { workspace = true }
rustfmt-wrapper = { workspace = true }
semver = { workspace = true }
serde_json = { workspace = true }
schemars = { workspace = true }

[dev-dependencies]
assert_cmd = { workspace = true }
expectorate = { workspace = true }
newline-converter = { workspace = true }
tempdir = { workspace = true }

[lints]
workspace = true
