[package]
name = "example-build"
version = "0.0.0"
authors = ["Adam H. Leventhal <ahl@oxidecomputer.com>"]
edition = "2021"

[dependencies]
serde = "1.0"
serde_json = "1.0.94"

[build-dependencies]
prettyplease = "0.1"
schemars = "0.8"
serde_json = "1.0.94"
syn = "1"
typify = { path = "../typify" }
