[package]
name = "typespace"
version = "0.1.0"
edition = "2021"

[dev-dependencies]
expectorate = { workspace = true }
json-serde = { workspace = true }
newline-converter = { workspace = true }
prettyplease = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
typespace-test-macro = { path = "../typespace-test-macro" }

[dependencies]
heck = { workspace = true }
log = { workspace = true }
proc-macro2 = { workspace = true }
quote = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
syn = { workspace = true }
