[package]
name = "typify-cli"
version = "0.0.6-dev"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "typify-cli"
path = "src/main.rs"

[dependencies]
serde = "1.0"
schemars = "0.8"
serde_json = "1.0"
typify = { version = "0.0.6-dev", path = "../typify" }
