[package]
name = "typify-impl-mk2"
version = "0.10.0"
edition = "2021"

[dependencies]
# TODO
anyhow = "1.0.98"
prettyplease = { workspace = true }

heck = { workspace = true }
log = { workspace = true }
proc-macro2 = { workspace = true }
quote = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
syn = { workspace = true }
thiserror = { workspace = true }
unicode-ident = { workspace = true }
url = { workspace = true }

[dev-dependencies]
expectorate = { workspace = true }
prettyplease = { workspace = true }
schemars = { workspace = true, features = ["uuid1", "impl_json_schema"] }
