[package]
name = "typify-impl"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
description = "typify backend implementation"
repository = "https://github.com/oxidecomputer/typify"
readme = "../README.md"

[dependencies]
heck = "0.5.0"
iref = "3.1.4"
log = "0.4.22"
pathdiff = "0.2.1"
proc-macro2 = "1.0.86"
quote = "1.0.36"
regress = "0.10.0"
schemars = "0.8.21"
semver = "1.0.23"
serde = "1.0.204"
serde_json = "1.0.122"
syn = { version = "2.0.72", features = ["full"] }
thiserror = "1.0.63"
unicode-ident = "1.0.12"

[dev-dependencies]
env_logger = "0.10.2"
expectorate = "1.1.0"
paste = "1.0.15"
rustfmt-wrapper = "0.2.1"
schema = "0.1.0"
schemars = { version = "0.8.21", features = ["uuid1", "impl_json_schema"] }
syn = { version = "2.0.72", features = ["full", "extra-traits"] }
uuid = "1.10.0"
