[package]
name = "typify-impl"
version = "0.3.0"
edition = "2021"
license = "Apache-2.0"
description = "typify backend implementation"
repository = "https://github.com/oxidecomputer/typify"
readme = "../README.md"

[dependencies]
heck = "0.5.0"
log = "0.4.26"
proc-macro2 = "1.0.93"
quote = "1.0.38"
regress = "0.10.3"
schemars = "0.8.21"
semver = "1.0.25"
serde = "1.0.218"
serde_json = "1.0.138"
syn = { version = "2.0.99", features = ["full"] }
thiserror = "2.0.11"
unicode-ident = "1.0.17"


[dev-dependencies]
env_logger = "0.11.6"
expectorate = "1.1.0"
paste = "1.0.15"
rustfmt-wrapper = "0.2.1"
schema = "0.1.0"
schemars = { version = "0.8.21", features = ["uuid1", "impl_json_schema"] }
syn = { version = "2.0.99", features = ["full", "extra-traits", "visit-mut"] }
uuid = "1.14.0"
