[package]
name = "typify-macro"
version = "0.4.3"
edition = "2021"
license = "Apache-2.0"
description = "typify macro implementation"
repository = "https://github.com/oxidecomputer/typify"
readme = "../README.md"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.101"
quote = "1.0.40"
schemars = "0.8.22"
semver = { version = "1.0.26", features = ["serde"] }
serde = "1.0.219"
serde_json = "1.0.145"
serde_tokenstream = "0.2.2"
syn = { version = "2.0", features = ["full", "extra-traits"] }
typify-impl = { version = "0.4.3", path = "../typify-impl" }
