[package]
name = "typify-macro"
version = "0.6.2"
edition = "2021"
license = "Apache-2.0"
description = "typify macro implementation"
repository = "https://github.com/oxidecomputer/typify"
readme = "../README.md"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.106"
quote = "1.0.45"
schemars = "0.8.22"
semver = { version = "1.0.28", features = ["serde"] }
serde = "1.0.228"
serde_json = "1.0.149"
serde_tokenstream = "0.2.3"
syn = { version = "2.0", features = ["full", "extra-traits"] }
typify-impl = { version = "0.6.2", path = "../typify-impl" }
