[package]
name = "typify-test"
version = "0.0.0"
edition = "2021"

[dependencies]
regress = "0.10.3"
serde = "1.0.218"
serde_json = "1.0.138"

[build-dependencies]
ipnetwork = { version = "0.21.1", features = ["schemars"] }
prettyplease = "0.2.29"
schemars = "0.8.21"
serde = "1.0.218"
syn = "2.0.99"
typify = { path = "../typify" }
