[package]
name = "typify-test"
version = "0.0.0"
edition = "2021"

[dependencies]
regress = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

[build-dependencies]
typify = { path = "../typify" }

ipnetwork = { workspace = true }
prettyplease = { workspace = true }
schemars = { workspace = true }
serde = { workspace = true }
syn = { workspace = true }
