[package]
name = "typify"
version = "0.0.16"
edition = "2021"
license = "Apache-2.0"
description = "JSON schema to rust type code generator"
repository = "https://github.com/oxidecomputer/typify"
readme = "../README.md"
keywords = ["json", "schema", "proc_macro"]
categories = ["api-bindings", "compilers"]

[features]
default = ["macro"]
macro = ["typify-macro"]

[dependencies]
typify-macro = { version = "0.0.16", path = "../typify-macro", optional = true }
typify-impl = { version = "0.0.16", path = "../typify-impl" }

[dev-dependencies]
chrono = { version = "0.4.38", features = ["serde"] }
env_logger = "0.10.2"
expectorate = "1.1.0"
glob = "0.3.1"
quote = "1.0.36"
regress = "0.9.1"
rustfmt-wrapper = "0.2.1"
schemars = "0.8.17"
serde = "1.0.200"
serde_json = "1.0.116"
trybuild = "1.0.93"
uuid = { version = "1.8.0", features = ["serde"] }
