[package]
name = "typify"
version = "0.3.0"
edition = "2021"
license = "Apache-2.0"
description = "JSON schema to rust type code generator"
repository = "https://github.com/oxidecomputer/typify"
readme = "../README.md"
keywords = ["json", "schema", "proc_macro"]
categories = ["api-bindings", "compilers"]

[features]
default = ["macro"]
macro = ["typify-macro"]

[dependencies]
typify-macro = { version = "0.3.0", path = "../typify-macro", optional = true }
typify-impl = { version = "0.3.0", path = "../typify-impl" }

[dev-dependencies]
chrono = { version = "0.4.39", features = ["serde"] }
env_logger = "0.11.6"
expectorate = "1.1.0"
glob = "0.3.2"
quote = "1.0.39"
regress = "0.10.3"
rustfmt-wrapper = "0.2.1"
schemars = "0.8.22"
serde = "1.0.218"
serde_json = "1.0.140"
trybuild = "1.0.104"
uuid = { version = "1.14.0", features = ["serde"] }
